# mixedlib

./: .gitignore  pyproject.toml  pyrightconfig.json
python/mixedlib/: __init__.py  _rust.pyi
python/mixedlib/rust/: __init__.py
python/tests/: test_python_ops.py  test_rust_ops.py
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: gen_stubs.py
vscode-extension/: .vscodeignore  LICENSE  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
